# musicAggregator

./: Makefile  README.md  pyproject.toml
musicAggregator/: __main__.py  config.py
