[tool.poetry]
name = "rssBot"
version = "0.1.0"
description = ""
authors = ["Tom <tom@hillsdon.net>"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "^7.5.0"
pydantic = "^1.9.0"
loguru = "^0.6.0"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
pyflakes = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
